Add Google Tag Manager (GTM-KT8CFBQT) tracking

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Validator - Accurate Data Validation | Oursummerrecords Solutions</title>
-    <meta name="description" content="Validate every contact before you send. Contact Validator helps sales and marketing teams improve delivery, reduce bounce rates, and boost outreach ROI with accurate email and phone verification." />
+    <title>our-summer-records-deployed</title>
+    <meta name="description" content="our-summer-records-deployed - Professional Web Application" />
     <meta name="author" content="Oursummerrecords Solutions" />
     <meta name="keywords" content="email verification, contact validation, data validation, B2B lead verification, CRM integration, contact accuracy" />
 
     <meta property="og:title" content="Contact Validator - Accurate Data Validation | Oursummerrecords Solutions" />
     <meta property="og:description" content="Validate every contact before you send. Improve delivery rates and boost ROI with our enterprise-grade contact validation platform." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://our-summer-records-deployed.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@our-summer-records-deployed_dev" />
+    <meta name="twitter:image" content="https://our-summer-records-deployed.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
