--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>our-summer-records-deployed</title>
+    <title>Our-Summer-Records</title>
     <meta name="description" content="our-summer-records-deployed - Professional Web Application" />
     <meta name="author" content="Oursummerrecords Solutions" />
     <meta name="keywords" content="email verification, contact validation, data validation, B2B lead verification, CRM integration, contact accuracy" />
