--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@our-summer-records-deployed_dev" />
     <meta name="twitter:image" content="https://our-summer-records-deployed.dev/opengraph-image-p98pqg.png" />
+        <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
 
   <body>
